--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,10 +3,10 @@ server {
     index index.php index.html;
     server_name localhost;
 
-    root /var/www/public;
+    root /var/www/html/public;
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
